--- a/LMS System/LMS System.csproj
+++ b/LMS System/LMS System.csproj
@@ -174,9 +174,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201611281220107_Init.cs" />
-    <Compile Include="Migrations\201611281220107_Init.Designer.cs">
-      <DependentUpon>201611281220107_Init.cs</DependentUpon>
+    <Compile Include="Migrations\201611281244450_init.cs" />
+    <Compile Include="Migrations\201611281244450_init.Designer.cs">
+      <DependentUpon>201611281244450_init.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\UserSeed.cs" />
@@ -247,6 +247,7 @@
     <Content Include="Views\Courses\Details.cshtml" />
     <Content Include="Views\Courses\Edit.cshtml" />
     <Content Include="Views\Courses\Index.cshtml" />
+    <Content Include="Visual studio stuff.chm" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -260,8 +261,8 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201611281220107_Init.resx">
-      <DependentUpon>201611281220107_Init.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201611281244450_init.resx">
+      <DependentUpon>201611281244450_init.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
