--- a/LMS System/LMS System.csproj
+++ b/LMS System/LMS System.csproj
@@ -245,6 +245,7 @@
     <Content Include="Views\Courses\Index.cshtml" />
     <Content Include="Views\Account\RegisterTeacher.cshtml" />
     <Content Include="Views\Account\RegisterStudent.cshtml" />
+    <Content Include="Visual studio stuff.chm" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
