Module, seed, course add

--- a/LMS System/LMS System.csproj
+++ b/LMS System/LMS System.csproj
@@ -175,6 +175,14 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201612011545289_init.cs" />
+    <Compile Include="Migrations\201612011545289_init.Designer.cs">
+      <DependentUpon>201612011545289_init.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612011553104_init2.cs" />
+    <Compile Include="Migrations\201612011553104_init2.Designer.cs">
+      <DependentUpon>201612011553104_init2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\UserSeed.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -256,6 +264,7 @@
     <Content Include="Views\Modules\Details.cshtml" />
     <Content Include="Views\Modules\Edit.cshtml" />
     <Content Include="Views\Modules\Index.cshtml" />
+    <Content Include="Visual studio stuff.hnd" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -266,6 +275,12 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Migrations\201612011545289_init.resx">
+      <DependentUpon>201612011545289_init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612011553104_init2.resx">
+      <DependentUpon>201612011553104_init2.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
