--- a/LMS System/Views/Web.config
+++ b/LMS System/Views/Web.config
@@ -18,6 +18,7 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="LMS_System" />
+        <add namespace="LMS_System.Views.Helpers" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
