- "Add new teacher" page added - Navigational changes

--- a/LMS System/LMS System.csproj
+++ b/LMS System/LMS System.csproj
@@ -180,6 +180,10 @@
     <Compile Include="Migrations\201612021311130_db5.Designer.cs">
       <DependentUpon>201612021311130_db5.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201612021352010_db6.cs" />
+    <Compile Include="Migrations\201612021352010_db6.Designer.cs">
+      <DependentUpon>201612021352010_db6.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\UserSeed.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -266,18 +270,24 @@
     <Content Include="Views\AppUsers\Details.cshtml" />
     <Content Include="Views\AppUsers\Edit.cshtml" />
     <Content Include="Views\AppUsers\Index.cshtml" />
+    <Content Include="Views\Courses\Error.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
-    <Content Include="packages.config" />
+    <Content Include="packages.config">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201612021311130_db5.resx">
       <DependentUpon>201612021311130_db5.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612021352010_db6.resx">
+      <DependentUpon>201612021352010_db6.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
