--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,11 @@ ModelManifest.xml
 /LMS System/Migrations/201611281220427_initial.resx
 /LMS System/Migrations/201611281220427_initial.Designer.cs
 /LMS System/Migrations/201611281220427_initial.cs
+/LMS System/Migrations/201612021352010_db6.resx
+/LMS System/Migrations/201612021352010_db6.Designer.cs
+/LMS System/Migrations/201612021352010_db6.cs
+/LMS System/Migrations/201612021348203_ini4.resx
+/LMS System/Migrations/201612021348203_ini4.Designer.cs
+/LMS System/Migrations/201612021348203_ini4.cs
+/LMS System/Migrations/201611281533597_w.Designer.cs
+/LMS System/Migrations/201611281533597_w.cs
