--- a/LMS System/LMS System.csproj
+++ b/LMS System/LMS System.csproj
@@ -177,13 +177,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201612021307097_init.cs" />
-    <Compile Include="Migrations\201612021307097_init.Designer.cs">
-      <DependentUpon>201612021307097_init.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201612021332444_init2.cs" />
-    <Compile Include="Migrations\201612021332444_init2.Designer.cs">
-      <DependentUpon>201612021332444_init2.cs</DependentUpon>
+    <Compile Include="Migrations\201612051519254_init.cs" />
+    <Compile Include="Migrations\201612051519254_init.Designer.cs">
+      <DependentUpon>201612051519254_init.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\UserSeed.cs" />
@@ -287,12 +283,13 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201612021307097_init.resx">
-      <DependentUpon>201612021307097_init.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201612051519254_init.resx">
+      <DependentUpon>201612051519254_init.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201612021332444_init2.resx">
-      <DependentUpon>201612021332444_init2.cs</DependentUpon>
-    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="LexiconSecretVault\" />
+    <Folder Include="uploads\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
