--- a/.gitignore
+++ b/.gitignore
@@ -222,3 +222,5 @@ ModelManifest.xml
 /LMS System/Migrations/201612021348203_ini4.cs
 /LMS System/Migrations/201611281533597_w.Designer.cs
 /LMS System/Migrations/201611281533597_w.cs
+/LMS System/uploads/Bootstrap.txt
+/LMS System/App_Data/uploads/Bootstrap.txt
