csproj and details

--- a/LMS System/LMS System.csproj
+++ b/LMS System/LMS System.csproj
@@ -281,6 +281,7 @@
     <Content Include="Views\Activities\Edit.cshtml" />
     <Content Include="Views\Activities\Index.cshtml" />
     <Content Include="Views\Activities\Details.cshtml" />
+    <Content Include="Views\Account\CourseTeacherView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
