--- a/LMS System/LMS System.csproj
+++ b/LMS System/LMS System.csproj
@@ -276,6 +276,7 @@
     <Content Include="Views\Activities\Index.cshtml" />
     <Content Include="Views\Account\CourseTeacherView.cshtml" />
     <Content Include="Views\Activities\Details.cshtml" />
+    <Content Include="Views\Courses\Schedule.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
