--- a/LMS System/LMS System.csproj
+++ b/LMS System/LMS System.csproj
@@ -167,16 +167,20 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
-    <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\ActivitiesController.cs" />
-    <Compile Include="Controllers\AppUsersController.cs" />
-    <Compile Include="Controllers\CoursesController.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\ManageController.cs" />
-    <Compile Include="Controllers\ModulesController.cs" />
+    <Compile Include="Controllersx\AccountController.cs" />
+    <Compile Include="Controllersx\ActivitiesController.cs" />
+    <Compile Include="Controllersx\AppUsersController.cs" />
+    <Compile Include="Controllersx\CoursesController.cs" />
+    <Compile Include="Controllersx\HomeController.cs" />
+    <Compile Include="Controllersx\ManageController.cs" />
+    <Compile Include="Controllersx\ModulesController.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612081408000_init2.cs" />
+    <Compile Include="Migrations\201612081408000_init2.Designer.cs">
+      <DependentUpon>201612081408000_init2.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\UserSeed.cs" />
@@ -192,10 +196,6 @@
     <Compile Include="Views\Helpers\ApplicationHelper.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\aspnet-LMS System-20161125035635.mdf" />
-    <Content Include="App_Data\aspnet-LMS System-20161125035635_log.ldf">
-      <DependentUpon>aspnet-LMS System-20161125035635.mdf</DependentUpon>
-    </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\CourseDetails.css" />
@@ -276,6 +276,11 @@
     <Content Include="Views\Activities\Index.cshtml" />
     <Content Include="Views\Account\CourseTeacherView.cshtml" />
     <Content Include="Views\Activities\Details.cshtml" />
+    <Content Include="Views\Activities\CreateUpload.cshtml" />
+    <Content Include="Views\Activities\IndexFiles.cshtml" />
+    <Content Include="Views\Activities\DeleteFile.cshtml" />
+    <Content Include="Visual studio stuff Andreas.hnd" />
+    <Content Include="Visual studio stuff_micke.chm" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -285,10 +290,15 @@
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
-  
   <ItemGroup>
+    <Folder Include="App_Data\" />
     <Folder Include="LexiconSecretVault\" />
     <Folder Include="uploads\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201612081408000_init2.resx">
+      <DependentUpon>201612081408000_init2.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
