--- a/LMS System/LMS System.csproj
+++ b/LMS System/LMS System.csproj
@@ -282,6 +282,7 @@
     <Content Include="Visual studio stuff Andreas.hnd" />
     <Content Include="Visual studio stuff_micke.chm" />
     <Content Include="Views\Courses\Schedule.cshtml" />
+    <Content Include="Views\Activities\EditFile.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
