--- a/LMS System/LMS System.csproj
+++ b/LMS System/LMS System.csproj
@@ -178,9 +178,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201612090923400_init.cs" />
-    <Compile Include="Migrations\201612090923400_init.Designer.cs">
-      <DependentUpon>201612090923400_init.cs</DependentUpon>
+    <Compile Include="Migrations\201612091021148_db12.cs" />
+    <Compile Include="Migrations\201612091021148_db12.Designer.cs">
+      <DependentUpon>201612091021148_db12.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\UserSeed.cs" />
@@ -297,8 +297,8 @@
     <Folder Include="uploads\" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201612090923400_init.resx">
-      <DependentUpon>201612090923400_init.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201612091021148_db12.resx">
+      <DependentUpon>201612091021148_db12.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
