--- a/LMS System/LMS System.csproj
+++ b/LMS System/LMS System.csproj
@@ -178,9 +178,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201612121050478_init.cs" />
-    <Compile Include="Migrations\201612121050478_init.Designer.cs">
-      <DependentUpon>201612121050478_init.cs</DependentUpon>
+    <Compile Include="Migrations\201612121247157_senas.cs" />
+    <Compile Include="Migrations\201612121247157_senas.Designer.cs">
+      <DependentUpon>201612121247157_senas.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\UserSeed.cs" />
@@ -303,8 +303,8 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201612121050478_init.resx">
-      <DependentUpon>201612121050478_init.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201612121247157_senas.resx">
+      <DependentUpon>201612121247157_senas.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
