--- a/LMS System/LMS System.csproj
+++ b/LMS System/LMS System.csproj
@@ -178,9 +178,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201612131223449_last1.cs" />
-    <Compile Include="Migrations\201612131223449_last1.Designer.cs">
-      <DependentUpon>201612131223449_last1.cs</DependentUpon>
+    <Compile Include="Migrations\201612131355209_db20.cs" />
+    <Compile Include="Migrations\201612131355209_db20.Designer.cs">
+      <DependentUpon>201612131355209_db20.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\UserSeed.cs" />
@@ -305,8 +305,8 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201612131223449_last1.resx">
-      <DependentUpon>201612131223449_last1.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201612131355209_db20.resx">
+      <DependentUpon>201612131355209_db20.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
