--- a/LMS System/LMS System.csproj
+++ b/LMS System/LMS System.csproj
@@ -178,10 +178,6 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201612131355209_db20.cs" />
-    <Compile Include="Migrations\201612131355209_db20.Designer.cs">
-      <DependentUpon>201612131355209_db20.cs</DependentUpon>
-    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\UserSeed.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -207,6 +203,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\background.png" />
     <Content Include="Images\logo-lexicon2x.gif" />
     <Content Include="Images\threat.jpg" />
     <Content Include="Scripts\bootstrap.js" />
@@ -303,11 +300,6 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201612131355209_db20.resx">
-      <DependentUpon>201612131355209_db20.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
